Finished the project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,8 @@
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/mainStyle.css">
 </head>
+
 <body>
     <header class="header">
         <div class="header__top-container">
@@ -42,19 +43,19 @@
                 <p class="header__logo">
                     <span>AVENUE</span> FASHION
                 </p>
-                <ul class="header__nav-list">
-                    <li class="header__nav-list-item">MEN'S</li>
-                    <li class="header__nav-list-item">WOMEN'S</li>
-                    <li class="header__nav-list-item">THE BRAND</li>
-                    <li class="header__nav-list-item header__nav-list-item_current">LOCAL STORES</li>
-                    <li class="header__nav-list-item">LOOK BOOK</li>
-                </ul>
                 <div class="header__search-wrapper">
                     <input class="header__search" type="text" placeholder="Search...">
                 </div>
                 <i class="fa fa-bars header__mobile-menu" aria-hidden="true"></i>
             </nav>
         </div>
+        <ul class="header__nav-list">
+            <li class="header__nav-list-item">MEN'S</li>
+            <li class="header__nav-list-item">WOMEN'S</li>
+            <li class="header__nav-list-item">THE BRAND</li>
+            <li class="header__nav-list-item header__nav-list-item_current">LOCAL STORES</li>
+            <li class="header__nav-list-item">LOOK BOOK</li>
+        </ul>
         <div class="header__image-wrapper">
             <img class="header__image" src="./img/header_image.jpg" alt="Main image">
         </div>
@@ -64,19 +65,25 @@
             <section class="cities__item">
                 <h2 class="cities__title">London</h2>
                 <h3 class="cities__address">180-182 Regent Street, London, W1B 5BT</h3>
-                <p class="cities__text">Lorem ipsum dolor sit amet, consectetur adipiscing esi elit. Vivamus at arcu sem. Vestibulum ornare eleifendit massa, nec tempor odio. Fusce posuere nunc iaculis ligula viverra iaculis. Aliquam erat volutpat.</p>
+                <p class="cities__text">Lorem ipsum dolor sit amet, consectetur adipiscing esi elit. Vivamus at arcu
+                    sem. Vestibulum ornare eleifendit massa, nec tempor odio. Fusce posuere nunc iaculis ligula viverra
+                    iaculis. Aliquam erat volutpat.</p>
                 <button class="cities__button">view details</button>
             </section>
             <section class="cities__item">
                 <h2 class="cities__title">New York</h2>
                 <h3 class="cities__address">109 Columbus Circle, New York, NY 10023</h3>
-                <p class="cities__text">Nunc non posuere nisl. Etiam finibus vel dui nec lobor&shy;tis. Aliquam egestas, sem quis condimentum venena&shy;tis, erat leo fermentum dolor, non sollicitudin massa mi eu nibh. Nullam vitae aliquam dui, non sodales nisl.</p>
+                <p class="cities__text">Nunc non posuere nisl. Etiam finibus vel dui nec lobor&shy;tis. Aliquam egestas,
+                    sem quis condimentum venena&shy;tis, erat leo fermentum dolor, non sollicitudin massa mi eu nibh.
+                    Nullam vitae aliquam dui, non sodales nisl.</p>
                 <button class="cities__button">view details</button>
             </section>
             <section class="cities__item">
                 <h2 class="cities__title">Paris</h2>
                 <h3 class="cities__address">2133 Rue Saint-Honoré, 75001 Paris</h3>
-                <p class="cities__text">Ut interdum fermentum blandit. Donec nec lacus egetit mi rhoncus eleifend. Curabitur laoreet nisl eget rutruml auctor. Vestibulum ante ipsum primis in faucibus orcip luctus et ultrices posuere cubilia curae cras ligula.</p>
+                <p class="cities__text">Ut interdum fermentum blandit. Donec nec lacus egetit mi rhoncus eleifend.
+                    Curabitur laoreet nisl eget rutruml auctor. Vestibulum ante ipsum primis in faucibus orcip luctus et
+                    ultrices posuere cubilia curae cras ligula.</p>
                 <button class="cities__button">view details</button>
             </section>
         </div>
@@ -91,13 +98,16 @@
             <div class="location__about">
                 <h2 class="location__title">London</h2>
                 <h3 class="location__address">180-182 Regent Street, London, W1B 5BT</h3>
-                <p class="location__text">Lorem ipsum dolor sit amet, consectetur adipiscing esi elit. Vivamus at arcu sem. Vestibulum ornare eleifendit massa, nec tempor odio. Fusce posuere nunc iaculis ligula viverra iaculis. Aliquam erat volutpat.</p>
+                <p class="location__text">Lorem ipsum dolor sit amet, consectetur adipiscing esi elit. Vivamus at arcu
+                    sem. Vestibulum ornare eleifendit massa, nec tempor odio. Fusce posuere nunc iaculis ligula viverra
+                    iaculis. Aliquam erat volutpat.</p>
                 <ul class="location__list">
                     <li>180-182 Regent Street, London, W1B 5BT</li>
                     <li>0123-456-789</li>
                     <li>www.yourwebsite.com</li>
                     <li>support@yourwebsite.com</li>
-                    <li>Monday-Friday: 9am to 6pm  Saturday:&nbsp;10am&nbsp;to&nbsp;6pm  Sunday:&nbsp;10am&nbsp;to&nbsp;2pm</li>
+                    <li>Monday-Friday: 9am to 6pm Saturday:&nbsp;10am&nbsp;to&nbsp;6pm
+                        Sunday:&nbsp;10am&nbsp;to&nbsp;2pm</li>
                 </ul>
                 <div class="location__buttons">
                     <button><i class="fa fa-facebook"></i></button>
@@ -108,6 +118,93 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer__info info">
+            <div class="info__links">
+                <div class="info__component">
+                    <h2 class="info__component-title">Information</h2>
+                    <div class="info__component-links-wrapper">
+                        <ul class="info__component-links">
+                            <li class="info__link">The&nbsp;brand</li>
+                            <li class="info__link info__link_active">Local&nbsp;stores</li>
+                            <li class="info__link">Customer&nbsp;service</li>
+                            <li class="info__link">Privacy&nbsp;&&nbsp;cookies</li>
+                            <li class="info__link">Site&nbsp;map</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="info__component">
+                    <h2 class="info__component-title">Why&nbsp;buy&nbsp;from&nbsp;us</h2>
+                    <div class="info__component-links-wrapper">
+                        <ul class="info__component-links">
+                            <li class="info__link">Shipping&nbsp;&&nbsp;returns</li>
+                            <li class="info__link">Secure&nbsp;shopping</li>
+                            <li class="info__link">Testimonials</li>
+                            <li class="info__link">Award&nbsp;winning</li>
+                            <li class="info__link">Ethical&nbsp;trading</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="info__component">
+                    <h2 class="info__component-title">Your&nbsp;account</h2>
+                    <div class="info__component-links-wrapper">
+                        <ul class="info__component-links">
+                            <li class="info__link">Sign&nbsp;in</li>
+                            <li class="info__link">Register</li>
+                            <li class="info__link">View&nbsp;cart</li>
+                            <li class="info__link">View&nbsp;your&nbsp;lookbook</li>
+                            <li class="info__link">Track&nbsp;an&nbsp;order</li>
+                            <li class="info__link">Update&nbsp;information</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="info__component">
+                    <h2 class="info__component-title">Lookbook</h2>
+                    <div class="info__component-links-wrapper">
+                        <ul class="info__component-links">
+                            <li class="info__link">Latest&nbsp;posts</li>
+                            <li class="info__link">Men’s&nbsp;lookbook</li>
+                            <li class="info__link">Women’s&nbsp;lookbook</li>
+                            <li class="info__link">Lookbooks&nbsp;RSS&nbsp;feed</li>
+                            <li class="info__link">View&nbsp;your&nbsp;lookbook</li>
+                            <li class="info__link">Delete&nbsp;your&nbsp;lookbook</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="info__component">
+                    <h2 class="info__component-title">contact&nbsp;details</h2>
+                    <div class="info__component-links-wrapper">
+                        <ul class="info__component-links">
+                            <li class="info__link">Head Office: Avenue Fashion,
+                                180-182 Regent Street, London.</li>
+                            <li class="info__link">Telephone:&nbsp;0123-456-789 </li>
+                            <li class="info__link">Email:&nbsp;support@yourwebsite.com</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="info__blocks">
+                <div class="info__block info__block1">
+                    <h2>award winner</h2>
+                    <p>fashion awards 2016</p>
+                </div>
+                <div class="info__block info__block2">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-pinterest"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__company">
+            <p>© 2016 Avenue Fashion™</p>
+            <ul>
+                <li>Design by RobbyDesigns.com</li>
+                <li>Dev by Loremipsum.com</li>
+            </ul>
+        </div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
+
 </html>
